Table users {
  user_id int [pk, increment]
  username varchar(50) [not null]
  email varchar(100) [not null, unique]
  password varchar(255) [not null]
}

Table characters {
  character_id int [pk, increment]
  user_id int [not null, ref: > users.user_id]
  character_type varchar(20) [not null] // adventurer, engineer, alchemist, scholar
  name varchar(50) [not null]
}

Table equipment_types {
  type_id int [pk, increment]
  name varchar(50) [not null] // head, chest, legs, primary_arm, secondary_arm
}

Table equipment {
  equipment_id int [pk, increment]
  name varchar(50) [not null]
  type_id int [not null, ref: > equipment_types.type_id]
  rating int [not null]
  strength int [default: 0]
  defense int [default: 0]
  character_type varchar(20) [not null] // indica qué personaje puede equiparlo
}

Table character_equipment {
  char_eq_id int [pk, increment]
  character_id int [not null, ref: > characters.character_id]
  equipment_id int [not null, ref: > equipment.equipment_id]
  type_id int [not null, ref: > equipment_types.type_id]

  Indexes {
    (character_id, type_id) [unique]
  }
}